--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-editor": "^1.4.0",
+    "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-burger-menu": "^3.0.9",
