--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.2.3",
     "browserslist": "^4.21.5",
     "camelcase": "^6.3.0",
+    "caniuse-lite": "^1.0.30001551",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^3.4.1",
@@ -42,6 +43,7 @@
     "jest-resolve": "^27.5.1",
     "jest-watch-typeahead": "^1.1.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "moment": "^2.29.4",
     "node-sass": "^8.0.0",
     "postcss": "^8.4.21",
     "postcss-flexbugs-fixes": "^5.0.2",
