--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/x-data-grid": "^5.17.26",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@svgr/webpack": "^6.5.1",
+    "@tanstack/react-query": "^4.32.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -64,6 +65,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-query-kit": "^1.4.6",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.8.2",
     "reactstrap": "^9.1.6",
@@ -75,7 +77,6 @@
     "source-map-loader": "^3.0.2",
     "style-loader": "^3.3.1",
     "sweetalert2": "^11.7.3",
-    "tailwindcss": "^3.2.7",
     "terser-webpack-plugin": "^5.3.6",
     "web-vitals": "^2.1.4",
     "webpack": "^5.75.0",
@@ -163,5 +164,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
